--- a/index.html
+++ b/index.html
@@ -1,1 +1,32 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/JJ-Dev18/houmPrueba/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/JJ-Dev18/houmPrueba/pokebola.png"/><link rel="manifest" href="/JJ-Dev18/houmPrueba/manifest.json"/><script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script><title>Houm Pokédex</title><script defer="defer" src="/JJ-Dev18/houmPrueba/static/js/main.d1dbf24a.js"></script><link href="/JJ-Dev18/houmPrueba/static/css/main.cec2493d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="./JJ-Dev18/houmPrueba/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Web site created using create-react-app"
+    />
+    <link rel="apple-touch-icon" href="./JJ-Dev18/houmPrueba/pokebola.png" />
+    <link rel="manifest" href="./JJ-Dev18/houmPrueba/manifest.json" />
+    <script
+      src="https://kit.fontawesome.com/2c36e9b7b1.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Houm Pokédex</title>
+    <script
+      defer="defer"
+      src="./JJ-Dev18/houmPrueba/static/js/main.d1dbf24a.js"
+    ></script>
+    <link
+      href="./JJ-Dev18/houmPrueba/static/css/main.cec2493d.css"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
+</html>
