--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./JJ-Dev18/houmPrueba/pokebola.png" />
-    <link rel="manifest" href="./JJ-Dev18/houmPrueba/manifest.json" />
+    <link rel="apple-touch-icon" href="/houmPrueba/pokebola.png" />
+    <link rel="manifest" href="/houmPrueba/manifest.json" />
     <script
       src="https://kit.fontawesome.com/2c36e9b7b1.js"
       crossorigin="anonymous"
@@ -18,10 +18,10 @@
     <title>Houm Pokédex</title>
     <script
       defer="defer"
-      src="./JJ-Dev18/houmPrueba/static/js/main.d1dbf24a.js"
+      src="/houmPrueba/static/js/main.d1dbf24a.js"
     ></script>
     <link
-      href="./JJ-Dev18/houmPrueba/static/css/main.cec2493d.css"
+      href="/houmPrueba/static/css/main.cec2493d.css"
       rel="stylesheet"
     />
   </head>
