--- a/index.html
+++ b/index.html
@@ -16,14 +16,8 @@
       crossorigin="anonymous"
     ></script>
     <title>Houm Pokédex</title>
-    <script
-      defer="defer"
-      src="/houmPrueba/static/js/main.d1dbf24a.js"
-    ></script>
-    <link
-      href="/houmPrueba/static/css/main.cec2493d.css"
-      rel="stylesheet"
-    />
+    <script defer="defer" src="/houmPrueba/static/js/main.7dfef580.js"></script>
+    <link href="/houmPrueba/static/css/main.cec2493d.css" rel="stylesheet" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
