--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/houmPrueba/favicon.ico" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Prueba houm Challenge Frontend" />
-    <link rel="manifest" href="/houmPrueba/manifest.json" />
-    <title>Houm Pokédex</title>
-    <script defer="defer" src="/houmPrueba/static/js/main.73fb494a.js"></script>
-    <link href="/houmPrueba/static/css/main.cec2493d.css" rel="stylesheet" />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <script
-      src="https://kit.fontawesome.com/2c36e9b7b1.js"
-      crossorigin="anonymous"
-    ></script>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/houmPrueba/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Prueba houm Challenge Frontend"/><link rel="manifest" href="/houmPrueba/manifest.json"/><title>Houm Pokédex</title><script defer="defer" src="/houmPrueba/static/js/main.038da17b.js"></script><link href="/houmPrueba/static/css/main.cec2493d.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script></body></html>
